# AI-SIMS-PSD

./: .env.example  .gitignore  Makefile  README.md  TENANT_UPDATE_DOCS_API.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/: copilot-instructions.md
alembic/: README.md  env.py
alembic/versions/: 20251217_1021_a74dffe26155_initial_migration_create_users_table.py  20251217_1028_93fb9dccfe23_initial_migration_create_users_table.py  20251217_1047_fd09987c03eb_change_user_id_to_uuid.py  20251222_1503_3ab18aa455b7_add_role_column_to_users_table.py  20260109_1408_680acd149615_remove_firebase_id.py  20260109_1414_44172a7c3ca6_add_firebase_id.py  20260109_1422_9c5d0db4a7e5_initial.py  20260109_1656_9462b9567ea4_add_tenants_and_businesses.py
app/: main.py
app/api/: health_route.py  router.py
app/api/routes/: auth_route.py  proposal_route.py  tenant_route.py
app/api/v1/: router.py
app/api/v1/routes/: auth_route.py
app/core/: config.py  database.py  middleware.py  object_storage.py  schema.py  security.py  server.py  utils.py
app/ml/: README_MODEL_SETUP.md
app/models/: __init__.py  auth_dto.py  tenant_model.py  user.py  user_model.py
app/models/dto/: auth_dto.py  proposal_dto.py  tenant_dto.py
app/repositories/: tenant_repository.py  user_repository.py
app/services/: auth_service.py  file_upload_service.py  health.py  pdf_parser_service.py  proposal_classifier_service.py  tenant_service.py
docker/: .dockerignore  Dockerfile  README.md
docker/scripts/: entrypoint.sh  start.bat  start.sh  stop.bat  stop.sh  wait-for-db.sh
docs/: DOCKER_GUIDE.md  MIGRATION_GUIDE.md  PROPOSAL_CLASSIFICATION.md  QUICKSTART.md  SETUP_AUTH.md  SETUP_PROPOSAL_CLASSIFICATION.md  TROUBLESHOOTING_PDF.md
notebooks/: 1_Data Preparation.ipynb  2_EDA.ipynb  3_RekFit.ipynb  ChunkingPDF.ipynb  RekFit copy 2.ipynb  parsed_proposal.csv
notebooks/dataset/: dataset_segmentasi_proposal.csv
notebooks/dataset/preprocessed/: dataset_clean_indobert.csv  dataset_penilaian_indobert.csv  full_preprocessed.csv  test_preprocessed.csv  train_preprocessed.csv
